fix: overflow scroll on loginPage on real mobile device

--- a/index.css
+++ b/index.css
@@ -21,12 +21,6 @@ a {
     src: url(res/auromiya.ttf);
 }
 
-@property --background-color {
-    syntax: "<color>";
-    inherits: false;
-    initial-value: #F6BEC4;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -36,24 +30,29 @@ a {
 html, body {
     width: 100%;
     height: 100%;
-    background-color: var(--background-color);
-    overflow-x: hidden;
+    position: relative;
+    background-color: #F6BEC4;
+}
+
+.pageContent {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    overflow: hidden;
 }
 
 .backgroundImage {
-    position: absolute;
     height: 100%;
-    left: 50%;
-    transform: translate(-50%, 0%);
+    position: absolute;
 }
 
 .loginContent {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     color: black;
+    position: absolute;
 }
 
 h1 {
@@ -103,9 +102,6 @@ input[type=text]:focus {
     }
     .backgroundImage {
         height: 95%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
     }
 }
 
